<resources>
    <string name="app_name">TODO</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email2">Email</string>
    <string name="register">Register</string>

    <!-- Google SignIn/Register -->
    <string name="google_signin">Google Login</string>
...
