...
            android:layout_height="56dp"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageButton
            android:id="@+id/MenuButton"
            android:layout_width="70dp"
            android:layout_height="55dp"
            android:background="#006200EE"
            android:contentDescription="@string/action_settings"
            android:onClick="goToMenu"
            android:visibility="visible"
...
